<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="about_app_authors_k9">The K-9 Dog Walkers</string>
    <string name="about_app_authors_thunderbird">Thunderbird Mobile Team</string>
    <string name="open_camera">Open Camera</string>
    <string name="attach_file">Attach File</string>
    <string name="camera_permission_denied">Camera Permission Denied! Unable to take photo</string>
    <string name="source_code">Source code</string>
    <string name="app_license">Apache License, Version 2.0</string>
    <string name="about_project_title">Open Source Project</string>
    <string name="about_website_title">Website</string>
    <string name="get_help_title">Get help</string>
    <string name="user_forum_title">User forum</string>
    <string name="about_libraries">Libraries</string>
    <string name="license">License</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_loading_error">Couldn\'t load the changelog.</string>
    <string name="changelog_version_title">Version %s</string>
    <string name="changelog_recent_changes_title">What\'s new</string>
    <string name="changelog_show_recent_changes">Show recent changes when app was updated</string>
    <string name="changelog_snackbar_text">Find out what\'s new in this release</string>
    <string name="changelog_snackbar_button_text">View</string>
    <string name="changelog_latest_label_text">LATEST</string>
    <string name="changelog_type_new_text">NEW</string>
    <string name="changelog_type_changed_text">CHANGED</string>
    <string name="changelog_type_fixed_text">FIXED</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%1$s</xliff:g>\" will be removed from <xliff:g id="app_name">%2$s</xliff:g>.</string>
    <string name="authors">Authors</string>
    <string name="about_title">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">Accounts</string>
    <string name="compose_title_compose">Compose</string>
    <string name="compose_title_reply">Reply</string>
    <string name="compose_title_reply_all">Reply all</string>
    <string name="compose_title_forward">Forward</string>
    <string name="compose_title_forward_as_attachment">Forward as attachment</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="choose_folder_move_title">Move to…</string>
    <string name="choose_folder_copy_title">Copy to…</string>
    <string name="send_action">Send</string>
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
    <string name="reply_action">Reply</string>
    <string name="send_messages_action">Send messages</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="search_everywhere_action">Search everywhere</string>
    <string name="empty_spam_action">Empty Spam</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="notification_channel_messages_title">Messages</string>
    <string name="notification_channel_miscellaneous_title">Miscellaneous</string>
    <string name="account_setup_incoming_delete_policy_label">When I delete a message</string>
    <string name="account_setup_expunge_policy_label">Erase deleted messages on server</string>
    <string name="drafts_folder_label">Drafts folder</string>
    <string name="sent_folder_label">Sent folder</string>
    <string name="trash_folder_label">Trash folder</string>
    <string name="archive_folder_label">Archive folder</string>
    <string name="spam_folder_label">Spam folder</string>
    <string name="account_setup_incoming_subscribed_folders_only_label">Show only subscribed folders</string>
    <string name="idle_refresh_period_label">Refresh IDLE connection</string>
    <string name="account_settings_push_advanced_title">Advanced</string>
    <string name="account_settings_title_fmt">Account settings</string>
    <string name="account_settings_notify_label">New mail notifications</string>
    <string name="account_settings_notify_sync_label">Sync notifications</string>
    <string name="account_settings_notify_summary">Notify in status bar when mail arrives</string>
    <string name="account_settings_notify_sync_summary">Notify in status bar while mail is checked</string>
    <string name="account_settings_notify_self_label">Include outgoing mail</string>
    <string name="account_settings_notify_self_summary">Show a notification for messages I sent</string>
    <string name="account_notify_contacts_mail_only_label">Contacts only</string>
    <string name="account_notify_contacts_mail_only_summary">Show notifications only for messages from known contacts</string>
    <string name="account_settings_ignore_chat_messages_label">Ignore chat messages</string>
    <string name="account_settings_ignore_chat_messages_summary">Don\'t show notifications for messages belonging to an email chat</string>
    <string name="account_settings_mark_message_as_read_on_view_label">Mark as read when opened</string>
    <string name="account_settings_mark_message_as_read_on_view_summary">Mark a message as read when it is opened for viewing</string>
    <string name="account_settings_mark_message_as_read_on_delete_label">Mark as read when deleted</string>
    <string name="account_settings_mark_message_as_read_on_delete_summary">Mark a message as read when it is deleted</string>
    <string name="account_settings_notification_channels_label">Notification categories</string>
    <string name="account_settings_open_notification_settings_messages_summary">Configure notifications for new messages</string>
    <string name="account_settings_open_notification_settings_miscellaneous_summary">Configure error and status notifications</string>
    <string name="account_settings_show_pictures_label">Always show images</string>
    <string name="account_settings_composition">Sending mail</string>
    <string name="account_settings_default_quoted_text_shown_label">Quote message when replying</string>
    <string name="account_settings_default_quoted_text_shown_summary">Include the original message in your reply.</string>
    <string name="account_settings_reply_after_quote_label">Reply after quoted text</string>
    <string name="account_settings_reply_after_quote_summary">The original message will appear above your reply.</string>
    <string name="account_settings_strip_signature_label">Strip signatures on reply</string>
    <string name="account_settings_strip_signature_summary">Signatures will be removed from quoted messages</string>
    <string name="account_settings_message_format_label">Message Format</string>
    <string name="account_settings_always_show_cc_bcc_label">Always show Cc/Bcc</string>
    <string name="account_settings_message_read_receipt_label">Read receipt</string>
    <string name="account_settings_message_read_receipt_summary">Always request a read receipt</string>
    <string name="account_settings_quote_style_label">Reply quoting style</string>
    <string name="account_settings_upload_sent_messages_label">Upload sent messages</string>
    <string name="account_settings_upload_sent_messages_summary">Upload messages to Sent folder after sending</string>
    <string name="account_settings_general_title">General settings</string>
    <string name="account_settings_reading_mail">Reading mail</string>
    <string name="account_settings_sync">Fetching mail</string>
    <string name="account_settings_folders">Folders</string>
    <string name="account_settings_quote_prefix_label">Quoted text prefix</string>
    <string name="account_settings_crypto">End-to-end encryption</string>
    <string name="account_settings_crypto_app">Enable OpenPGP support</string>
    <string name="account_settings_crypto_key">Configure end-to-end key</string>
    <string name="account_settings_crypto_encrypt_all_drafts">Store all drafts encrypted</string>
    <string name="account_settings_crypto_encrypt_all_drafts_on">All drafts will be stored encrypted</string>
    <string name="account_settings_crypto_encrypt_all_drafts_off">Encrypt drafts only if encryption is enabled</string>
    <string name="account_settings_mail_check_frequency_label">Folder poll frequency</string>
    <string name="account_settings_mail_display_count_label">Local folder size</string>
    <string name="account_settings_autodownload_message_size_label">Fetch messages up to</string>
    <string name="account_settings_message_age_label">Sync messages from</string>
    <string name="account_settings_sync_remote_deletetions_label">Sync server deletions</string>
    <string name="account_settings_sync_remote_deletetions_summary">Remove messages when deleted on server</string>
    <string name="account_settings_incoming_label">Incoming server</string>
    <string name="account_settings_incoming_summary">Configure the incoming mail server</string>
    <string name="account_settings_outgoing_label">Outgoing server</string>
    <string name="account_settings_outgoing_summary">Configure the outgoing mail (SMTP) server</string>
    <string name="notifications_title">Notifications</string>
    <string name="account_settings_vibration">Vibration</string>
    <string name="account_settings_ringtone">New mail ringtone</string>
    <string name="account_settings_notification_light_label">Notification light</string>
    <string name="account_settings_composition_label">Composition defaults</string>
    <string name="account_settings_composition_summary">Set your default From, Bcc and signature</string>
    <string name="account_settings_identities_label">Manage identities</string>
    <string name="account_settings_identities_summary">Set up alternate \'From\' addresses and signatures</string>
    <string name="sort_by">Sort by…</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_arrival">Arrival</string>
    <string name="sort_by_subject">Subject</string>
    <string name="sort_by_sender">Sender</string>
    <string name="sort_by_flag">Star</string>
    <string name="sort_by_unread">Read/unread</string>
    <string name="sort_by_attach">Attachments</string>
    <string name="batch_select_all">Select all</string>
    <string name="account_setup_push_limit_label">Max folders to check with push</string>
    <string name="account_settings_remote_search_num_label">Server search limit</string>
    <string name="account_settings_search">Search</string>
    <string name="action_remote_search">Search messages on server</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="account_settings_crypto_hide_sign_only">Hide unencrypted signatures</string>
    <string name="account_settings_crypto_hide_sign_only_on">Only encrypted signatures will be displayed</string>
    <string name="account_settings_crypto_hide_sign_only_off">All signatures will be displayed</string>
    <string name="account_settings_crypto_prefer_encrypt">Autocrypt mutual mode</string>
    <string name="account_settings_crypto_encrypt_subject">Encrypt message subjects</string>
    <string name="account_settings_crypto_encrypt_subject_subtitle">May not be supported by some recipients</string>
    <string name="ac_transfer_setting_title">Send Autocrypt Setup Message</string>
    <string name="ac_transfer_setting_summary">Securely share end-to-end setup with other devices</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="debug_invalidate_access_token_local">Test: Invalidate access token (local)</string>
    <string name="debug_invalidate_access_token_server">Test: Invalidate access token (server)</string>
    <string name="debug_force_auth_failure">Test: Force auth failure now</string>
    <string name="debug_feature_flags">DEBUG: Feature Flags</string>
</resources>