<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_action"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/search_remote"
        android:icon="@drawable/ic_search_remote"
        android:title="@string/action_remote_search"
        android:visible="false"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/set_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/set_sort_date"
                android:title="@string/sort_by_date"
                />
            <item
                android:id="@+id/set_sort_arrival"
                android:title="@string/sort_by_arrival"
                />
            <item
                android:id="@+id/set_sort_subject"
                android:title="@string/sort_by_subject"
                />
            <item
                android:id="@+id/set_sort_sender"
                android:title="@string/sort_by_sender"
                />
            <item
                android:id="@+id/set_sort_flag"
                android:title="@string/sort_by_flag"
                />
            <item
                android:id="@+id/set_sort_unread"
                android:title="@string/sort_by_unread"
                />
            <item
                android:id="@+id/set_sort_attach"
                android:title="@string/sort_by_attach"
                />
        </menu>
    </item>

    <item
        android:id="@+id/compose"
        android:icon="@drawable/ic_edit"
        android:title="@string/compose_action"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/batch_select_all"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/mark_all_as_read"
        android:title="@string/mark_all_as_read"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/send_messages"
        android:icon="@drawable/ic_upload"
        android:title="@string/send_messages_action"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/empty_spam"
        android:title="@string/empty_spam_action"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/empty_trash"
        android:title="@string/empty_trash_action"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/expunge"
        android:title="@string/expunge_action"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/search_everywhere"
        android:title="@string/search_everywhere_action"
        app:showAsAction="never"
        />

    <!-- Debug -->

    <item
        android:id="@+id/debug_invalidate_access_token_local"
        android:title="@string/debug_invalidate_access_token_local"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/debug_invalidate_access_token_server"
        android:title="@string/debug_invalidate_access_token_server"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/debug_force_auth_failure"
        android:title="@string/debug_force_auth_failure"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/debug_feature_flags"
        android:title="@string/debug_feature_flags"
        android:visible="false"
        app:showAsAction="never" />

</menu>
