<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="main"
    android:title="@string/account_settings_title_fmt"
    >

    <PreferenceScreen
        android:icon="@drawable/ic_settings"
        android:key="account_settings"
        android:title="@string/account_settings_general_title"
        >

        <com.takisoft.preferencex.AutoSummaryEditTextPreference
            android:dialogTitle="@string/account_settings_description_label"
            android:key="account_description"
            android:title="@string/account_settings_description_label"
            />

        <com.takisoft.preferencex.ColorPickerPreference
            android:key="chip_color"
            android:summary="@string/account_settings_color_summary"
            android:title="@string/account_settings_color_label"
            app:pref_colors="@array/account_colors"
            />

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_mark_email_read"
        android:key="reading_mail"
        android:title="@string/account_settings_reading_mail"
        >

        <ListPreference
            android:dialogTitle="@string/account_settings_show_pictures_label"
            android:entries="@array/show_pictures_entries"
            android:entryValues="@array/show_pictures_values"
            android:key="show_pictures_enum"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_show_pictures_label"
            />

        <CheckBoxPreference
            android:key="mark_message_as_read_on_view"
            android:summary="@string/account_settings_mark_message_as_read_on_view_summary"
            android:title="@string/account_settings_mark_message_as_read_on_view_label"
            />

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_sync"
        android:key="incoming_prefs"
        android:title="@string/account_settings_sync"
        >

        <ListPreference
            android:dialogTitle="@string/account_settings_mail_display_count_label"
            android:entries="@array/display_count_entries"
            android:entryValues="@array/display_count_values"
            android:key="account_display_count"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_mail_display_count_label"
            />

        <ListPreference
            android:dialogTitle="@string/account_settings_message_age_label"
            android:entries="@array/message_age_entries"
            android:entryValues="@array/message_age_values"
            android:key="account_message_age"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_message_age_label"
            />

        <ListPreference
            android:dialogTitle="@string/account_settings_autodownload_message_size_label"
            android:entries="@array/autodownload_message_size_entries"
            android:entryValues="@array/autodownload_message_size_values"
            android:key="account_autodownload_size"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_autodownload_message_size_label"
            />

        <ListPreference
            android:dialogTitle="@string/account_settings_mail_check_frequency_label"
            android:entries="@array/check_frequency_entries"
            android:entryValues="@array/check_frequency_values"
            android:key="account_check_frequency"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_mail_check_frequency_label"
            />

        <ListPreference
            android:dialogTitle="@string/account_settings_folder_sync_mode_label"
            android:entries="@array/folder_sync_mode_entries"
            android:entryValues="@array/folder_sync_mode_values"
            android:key="folder_sync_mode"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_folder_sync_mode_label"
            />

        <ListPreference
            android:dialogTitle="@string/account_settings_folder_push_mode_label"
            android:entries="@array/folder_push_mode_entries"
            android:entryValues="@array/folder_push_mode_values"
            android:key="folder_push_mode"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_folder_push_mode_label"
            />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="account_sync_remote_deletetions"
            android:summary="@string/account_settings_sync_remote_deletetions_summary"
            android:title="@string/account_settings_sync_remote_deletetions_label"
            />

        <CheckBoxPreference
            android:key="mark_message_as_read_on_delete"
            android:summary="@string/account_settings_mark_message_as_read_on_delete_summary"
            android:title="@string/account_settings_mark_message_as_read_on_delete_label"
            />

        <ListPreference
            android:dialogTitle="@string/account_setup_incoming_delete_policy_label"
            android:entries="@array/delete_policy_entries"
            android:entryValues="@array/delete_policy_values"
            android:key="delete_policy"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_setup_incoming_delete_policy_label"
            />

        <ListPreference
            android:dialogTitle="@string/account_setup_expunge_policy_label"
            android:entries="@array/expunge_policy_entries"
            android:entryValues="@array/expunge_policy_values"
            android:key="expunge_policy"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_setup_expunge_policy_label"
            />

        <Preference
            android:key="incoming"
            android:summary="@string/account_settings_incoming_summary"
            android:title="@string/account_settings_incoming_label"
            />

        <PreferenceScreen
            android:key="push_advanced"
            android:title="@string/account_settings_push_advanced_title"
            >

            <ListPreference
                android:entries="@array/push_limit_entries"
                android:entryValues="@array/push_limit_values"
                android:key="max_push_folders"
                app:useSimpleSummaryProvider="true"
                android:title="@string/account_setup_push_limit_label"
                />

            <ListPreference
                android:entries="@array/idle_refresh_period_entries"
                android:entryValues="@array/idle_refresh_period_values"
                android:key="idle_refresh_period"
                app:useSimpleSummaryProvider="true"
                android:title="@string/idle_refresh_period_label"
                />

        </PreferenceScreen>

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_edit"
        android:key="composing"
        android:title="@string/account_settings_composition"
        >

        <Preference
            android:key="composition"
            android:summary="@string/account_settings_composition_summary"
            android:title="@string/account_settings_composition_label"
            />

        <Preference
            android:key="manage_identities"
            android:summary="@string/account_settings_identities_summary"
            android:title="@string/account_settings_identities_label"
            />

        <ListPreference
            android:entries="@array/message_format_entries"
            android:entryValues="@array/message_format_values"
            android:key="message_format"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_message_format_label"
            />

        <CheckBoxPreference
            android:key="always_show_cc_bcc"
            android:title="@string/account_settings_always_show_cc_bcc_label"
            />

        <CheckBoxPreference
            android:key="message_read_receipt"
            android:summary="@string/account_settings_message_read_receipt_summary"
            android:title="@string/account_settings_message_read_receipt_label"
            />

        <ListPreference
            android:entries="@array/quote_style_entries"
            android:entryValues="@array/quote_style_values"
            android:key="quote_style"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_quote_style_label"
            />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="default_quoted_text_shown"
            android:summary="@string/account_settings_default_quoted_text_shown_summary"
            android:title="@string/account_settings_default_quoted_text_shown_label"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="quote_style"
            android:key="reply_after_quote"
            android:summary="@string/account_settings_reply_after_quote_summary"
            android:title="@string/account_settings_reply_after_quote_label"
            />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="strip_signature"
            android:summary="@string/account_settings_strip_signature_summary"
            android:title="@string/account_settings_strip_signature_label"
            />

        <com.takisoft.preferencex.AutoSummaryEditTextPreference
            android:dependency="quote_style"
            android:dialogTitle="@string/account_settings_quote_prefix_label"
            android:key="account_quote_prefix"
            android:title="@string/account_settings_quote_prefix_label"
            />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="upload_sent_messages"
            android:summary="@string/account_settings_upload_sent_messages_summary"
            android:title="@string/account_settings_upload_sent_messages_label"
            />

        <PreferenceScreen
            android:key="outgoing"
            android:summary="@string/account_settings_outgoing_summary"
            android:title="@string/account_settings_outgoing_label"
            />

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_folder"
        android:key="folders"
        android:title="@string/account_settings_folders"
        >

        <com.fsck.k9.ui.settings.account.FolderListPreference
            android:key="account_setup_auto_expand_folder"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_setup_auto_expand_folder"
            />

        <ListPreference
            android:dialogTitle="@string/account_settings_folder_display_mode_label"
            android:entries="@array/folder_display_mode_entries"
            android:entryValues="@array/folder_display_mode_values"
            android:key="folder_display_mode"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_folder_display_mode_label"
            />

        <CheckBoxPreference
            android:key="subscribed_folders_only"
            android:title="@string/account_setup_incoming_subscribed_folders_only_label"
            />

        <com.fsck.k9.ui.settings.account.FolderListPreference
            android:key="archive_folder"
            app:useSimpleSummaryProvider="true"
            android:title="@string/archive_folder_label"
            />

        <com.fsck.k9.ui.settings.account.FolderListPreference
            android:key="drafts_folder"
            app:useSimpleSummaryProvider="true"
            android:title="@string/drafts_folder_label"
            />

        <com.fsck.k9.ui.settings.account.FolderListPreference
            android:key="sent_folder"
            app:useSimpleSummaryProvider="true"
            android:title="@string/sent_folder_label"
            />

        <com.fsck.k9.ui.settings.account.FolderListPreference
            android:key="spam_folder"
            app:useSimpleSummaryProvider="true"
            android:title="@string/spam_folder_label"
            />

        <com.fsck.k9.ui.settings.account.FolderListPreference
            android:key="trash_folder"
            app:useSimpleSummaryProvider="true"
            android:title="@string/trash_folder_label"
            />

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_notifications"
        android:key="notifications"
        android:title="@string/notifications_title"
        >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="account_notify"
            android:summary="@string/account_settings_notify_summary"
            android:title="@string/account_settings_notify_label"
            />

        <ListPreference
            android:dependency="account_notify"
            android:dialogTitle="@string/account_settings_folder_notify_new_mail_mode_label"
            android:entries="@array/folder_notify_new_mail_mode_entries"
            android:entryValues="@array/folder_notify_new_mail_mode_values"
            android:key="folder_notify_new_mail_mode"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_folder_notify_new_mail_mode_label"
            />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="account_notify"
            android:key="account_notify_self"
            android:summary="@string/account_settings_notify_self_summary"
            android:title="@string/account_settings_notify_self_label"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="account_notify"
            android:key="account_notify_contacts_mail_only"
            android:summary="@string/account_notify_contacts_mail_only_summary"
            android:title="@string/account_notify_contacts_mail_only_label"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="account_notify"
            android:key="ignore_chat_messages"
            android:summary="@string/account_settings_ignore_chat_messages_summary"
            android:title="@string/account_settings_ignore_chat_messages_label"
            />

        <com.fsck.k9.ui.settings.account.NotificationSoundPreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="account_notify"
            android:key="account_ringtone"
            android:title="@string/account_settings_ringtone"
            />

        <com.fsck.k9.ui.settings.account.VibrationPreference
            android:dependency="account_notify"
            android:key="account_combined_vibration"
            android:title="@string/account_settings_vibration"
            android:entries="@array/vibrate_pattern_entries"
            android:entryValues="@array/vibrate_pattern_values"
            />

        <ListPreference
            android:dependency="account_notify"
            android:key="notification_light"
            android:title="@string/account_settings_notification_light_label"
            android:entries="@array/notification_light_entries"
            android:entryValues="@array/notification_light_values"
            app:useSimpleSummaryProvider="true"
            />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="account_notify_sync"
            android:summary="@string/account_settings_notify_sync_summary"
            android:title="@string/account_settings_notify_sync_label"
            />

        <PreferenceCategory
            android:key="notification_channels"
            android:title="@string/account_settings_notification_channels_label"
            >

            <com.fsck.k9.ui.settings.account.NotificationsPreference
                android:key="open_notification_settings_messages"
                android:summary="@string/account_settings_open_notification_settings_messages_summary"
                android:title="@string/notification_channel_messages_title"
                />

            <com.fsck.k9.ui.settings.account.NotificationsPreference
                android:key="open_notification_settings_miscellaneous"
                android:summary="@string/account_settings_open_notification_settings_miscellaneous_summary"
                android:title="@string/notification_channel_miscellaneous_title"
                />

        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_search"
        android:key="search"
        android:title="@string/account_settings_search"
        >

        <ListPreference
            android:dialogTitle="@string/account_settings_remote_search_num_label"
            android:entries="@array/remote_search_num_results_entries"
            android:entryValues="@array/remote_search_num_results_values"
            android:key="account_remote_search_num_results"
            app:useSimpleSummaryProvider="true"
            android:title="@string/account_settings_remote_search_num_label"
            />

    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_lock"
        android:key="openpgp"
        android:title="@string/account_settings_crypto"
        >

        <SwitchPreference
            android:key="openpgp_provider"
            android:title="@string/account_settings_crypto_app"
            />

        <org.openintents.openpgp.util.OpenPgpKeyPreference
            android:dependency="openpgp_provider"
            android:key="openpgp_key"
            android:title="@string/account_settings_crypto_key"
            />

        <com.fsck.k9.ui.settings.account.AutocryptPreferEncryptPreference
            android:dependency="openpgp_key"
            android:key="autocrypt_prefer_encrypt"
            android:title="@string/account_settings_crypto_prefer_encrypt"
            app:summaryOff="@string/switch_off"
            app:summaryOn="@string/switch_on"
            />

        <SwitchPreference
            android:dependency="openpgp_key"
            android:key="openpgp_hide_sign_only"
            android:summaryOff="@string/account_settings_crypto_hide_sign_only_off"
            android:summaryOn="@string/account_settings_crypto_hide_sign_only_on"
            android:title="@string/account_settings_crypto_hide_sign_only"
            />

        <SwitchPreference
            android:dependency="openpgp_key"
            android:key="openpgp_encrypt_subject"
            android:summary="@string/account_settings_crypto_encrypt_subject_subtitle"
            android:title="@string/account_settings_crypto_encrypt_subject"
            />

        <SwitchPreference
            android:dependency="openpgp_key"
            android:key="openpgp_encrypt_all_drafts"
            android:title="@string/account_settings_crypto_encrypt_all_drafts"
            android:summaryOn="@string/account_settings_crypto_encrypt_all_drafts_on"
            android:summaryOff="@string/account_settings_crypto_encrypt_all_drafts_off"
            />

        <Preference
            android:dependency="openpgp_key"
            android:key="autocrypt_transfer"
            android:summary="@string/ac_transfer_setting_summary"
            android:title="@string/ac_transfer_setting_title"
            />

    </PreferenceScreen>

</PreferenceScreen>
